# nix-config

./: .ideavimrc  .sops.yaml  LICENSE  README.md  flake.nix  shell.nix
home/features/cli/: default.nix  gh.nix  git.nix  kitty.nix
home/features/desktop/common/: firefox.nix
home/features/nvim/: default.nix  options.nix
home/features/nvim/lsp/: prettify_lsp.lua  roslyn.nix  rustaceanvim.nix  (+1 more)
home/jason/: pathfinder.nix  pgp.asc  ssh.pub
home/jason/common/: default.nix  kanagawa-term-edit.nix
hosts/: default.nix
hosts/common/: secrets.yaml
hosts/common/global/: default.nix  locale.nix  nix.nix  openssh.nix  sops.nix  zsh.nix
hosts/common/optional/: embedded.nix  greetd.nix  pipewire.nix  stylix.nix  wireless.nix
hosts/pathfinder/: default.nix  hardware-configuration.nix  ssh_host_ed25519_key.pub
hosts/workstations/: default.nix
hosts/workstations/xps/: default.nix
modules/home-manager/: default.nix  monitors.nix
overlays/: default.nix
secrets/: secrets.yaml
shared/: stylix.nix
templates/: default.nix
templates/go/: .gitignore  flake.nix  go.mod  main.go
templates/kind/: flake.nix
templates/rust/: .gitignore  Cargo.toml  flake.nix
templates/rust-cortex-m/: Cargo.toml  flake.nix  rust-analyzer.json
templates/rust-cortex-m/src/: main.rs
templates/rust-embedded/: Cargo.toml  Embed.toml  flake.nix  memory.x
templates/typescript/: .eslintrc.cjs  .gitignore  eslint.config.js  flake.nix  package-lock.json  package.json  pnpm-workspace.yaml  prettier.config.cjs  prettier.config.js  tsconfig.json
templates/typescript/src/: index.ts
(+128 files in other folders)
