[package]
authors = ["jasonpanosso <jasonpanosso@protonmail.com>"]
edition = "2018"
name = "rust-cortex-m" # TODO
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-cortex-m" # TODO
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
